--- a/assignment.css
+++ b/assignment.css
@@ -168,3 +168,58 @@ h4{
 .paglu{
     margin-bottom: 50px;
 }
+/* form fill up */
+.up{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+.lets{
+    font-size: 87px;
+     font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+}
+.Get{
+    width: 497px;
+    height: 62px;
+    border-radius: 10px;
+   background-color: rgba(78, 71, 255, 1);
+}
+.fill{
+    padding-top: 92.23px;
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+/* footer */
+.footer{
+    padding: 150px;
+    align-items: center;
+    text-align: center;
+    background-color:rgba(255, 255, 255, 1);
+}
+
+
+.a{
+    list-style: none;
+    display: flex;
+
+justify-content: space-between;
+}
+a{
+    text-decoration: none;
+    color:black;
+}
+.lo{
+    font-size: 100px;
+    font-weight: bold;
+    color: #4E47FF;
+     font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
+.sesh{
+    padding: 150px;
+
+}
