--- a/assignment.css
+++ b/assignment.css
@@ -1,11 +1,13 @@
 /* top */
 
-.navba{
+.navba {
     width: 1440px;
     height: 698px;
     background-image: url(../Assign-01/Assets/Hero-bg.png)
 }
-.nav{
+
+.nav {
+   margin: 0 auto;
     padding-left: 150px;
     padding-right: 150px;
     padding-bottom: 20px;
@@ -14,212 +16,278 @@
     justify-content: space-between;
     align-items: center;
 }
-.primary{
+
+button {
     width: 132px;
     height: 48px;
     border-radius: 10px;
-    padding:12px 36px;
-    background-color: #4E47FF;
-  border: 1px;
+    padding: 12px 36px;
+    background-color: rgba(78, 71, 255, 1);
+    border: 1px;
+    
 
 }
+.primary :hover{
+    background-color:#4E47FF;
+    box-shadow:rgb(0,0,0.12);
+}
+
 /* cool dark */
-.cool{
+.cool {
+   margin: 0 auto;
     padding-left: 267.5px;
     padding-top: 100px;
     padding-right: 267.5px;
     padding-bottom: 221px;
 }
-.dark{
+
+.dark {
+   margin: 0 auto;
     align-items: center;
     text-align: center;
 }
 
 .cool-dark {
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  color: #252432;
-  font-size: 65px;
-  font-weight: bold;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    color: #252432;
+    font-size: 65px;
+    font-weight: bold;
 }
+
 /* 3rd */
-.primary-launch{
-     width: 157px;
+.primary-launch {
+    margin: 0 auto;
+    width: 157px;
     height: 24px;
     border-radius: 10px;
-    padding:12px 36px;
+    padding: 12px 36px;
     background-color: #4E47FF;
     padding: 36px 12px;
     border: 1px;
 }
-.mini{
+
+.mini {
     border-radius: 40px;
     width: 403px;
     height: 328px;
 }
-.action{
+
+.action {
+   margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
-.see{
+
+.see {
+    
     padding-left: 141px;
     padding-top: 50px;
     padding-right: 120px;
 }
-.cool-2{
+
+.cool-2 {
     font-size: 42px;
     font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  color: #252432;
-  font-weight: bold;
+    font-optical-sizing: auto;
+    color: #252432;
+    font-weight: bold;
 }
+
 /* subscribe */
-.card{
-     border-radius:24px ;
-    background-color:rgba(78, 71, 255, 0.1);
+.card {
+    border-radius: 24px;
+    background-color: rgba(78, 71, 255, 0.1);
     padding-left: 149px;
     padding-right: 157px;
     padding-top: 30px;
     padding-bottom: 30px;
-    box-shadow: 0 4px 20px rgb(0, 0,0.1,);
+    box-shadow: 0 4px 20px rgb(0, 0, 0.1, );
 
 }
-.cool-num{
+
+.cool-num {
     font-size: 80px;
     color: #4E47FF;
-     font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  margin-bottom: 0;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    margin-bottom: 0;
 }
-.number{
+
+.number {
     align-items: center;
     display: flex;
     justify-content: space-between;
 }
-.user{
+
+.user {
     gap: 50px;
 }
-.controler{
+
+.controler {
     text-align: center;
 }
-.joined{
+
+.joined {
     font-size: 38px;
     font-weight: bold;
     color: #252432;
     margin-bottom: -35px;
 }
-.mili{
+
+.mili {
     padding: 140px;
 }
-.active{
-     font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
+
+.active {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
 }
+
 /* action section */
-.say{
+.say {
     padding: 20px;
+    margin: 0 auto;
 }
 
 
-.star ul{
+
+.star ul {
     display: flex;
     list-style: none;
     text-align: left;
     justify-content: left;
 }
-.h4{
+
+.h4 {
     margin-bottom: -25px;
 }
 
-.miya{
+.miya {
     display: flex;
     justify-content: space-between;
 }
-.ava{
+
+.ava {
     display: flex;
     align-items: center;
 }
-.maiyya{
+
+.maiyya {
     border-radius: 50px;
 }
-.toma{
+
+.toma {
     text-align: center;
 }
-.our{
+
+.our {
     padding: 160px;
     border-radius: 40px;
     background-color: white
 }
-.pagol{
+
+.pagol {
     padding: 30px;
     border-radius: 30px;
-    background-color:#F2EDED;
+    background-color: #F2EDED;
     text-align: left;
 }
-h4{
+
+h4 {
     margin-bottom: 0;
 }
-.tor{
+
+.tor {
     margin-bottom: 0;
 }
-.mare{
+
+.mare {
     margin-top: 0;
 }
-.paglu{
+
+.paglu {
     margin-bottom: 50px;
 }
+
 /* form fill up */
-.up{
+.up {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 60px;
+    text-align: right;
 }
-.lets{
+
+.lets {
     font-size: 87px;
-     font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
 }
-.Get{
+
+.Get {
     width: 497px;
     height: 62px;
     border-radius: 10px;
-   background-color: rgba(78, 71, 255, 1);
+    background-color: rgba(78, 71, 255, 1);
 }
-.fill{
+
+.fill {
     padding-top: 92.23px;
     padding-left: 100px;
     padding-right: 100px;
 
 }
+.text {
+    width: 497px;
+    height: 62px;
+    border-radius: 10px;
+
+}
+.message {
+    width: 497px;
+    height: 135px;
+    border-radius: 10px;
+}
+
 /* footer */
-.footer{
-    padding: 150px;
+.footer {
+    padding: 200px;
     align-items: center;
     text-align: center;
-    background-color:rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 
-.a{
+.a {
     list-style: none;
     display: flex;
 
-justify-content: space-between;
+    justify-content: space-between;
 }
-a{
+
+a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
-.lo{
+
+.lo {
     font-size: 100px;
     font-weight: bold;
     color: #4E47FF;
-     font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
 }
-.sesh{
+
+.sesh {
     padding: 150px;
 
 }
+
+.se {
+    color: #8987A1;
+}
+
